Always display scrollbar on body to avoid webage shaking when hiding or showing elements

--- a/app/sass/default.sass
+++ b/app/sass/default.sass
@@ -7,6 +7,7 @@ body
     color: #000
     font-family: $helvetica
     line-height: 1.2em
+    overflow-y: scroll
 
 a
     color: #F7484E
